create a nestjs package
